button on small view fix

--- a/css/gallerysmall.css
+++ b/css/gallerysmall.css
@@ -116,19 +116,18 @@
       }
 
       .nav-button{
-        display: none;
+        display: block;
+        width: 100%;
+        height: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #c24d2c;
+        color: #d9dad7;
+        border-radius: 5px;
       }
 
       .weather-nav{
-        display: block;
-        background-color: #c24d2c;
-        color: #d9dad7;
-        overflow: hidden;
-        margin: auto;
-        font-size: 24px;
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
+        display: none;
       }
 
       .weather-nav a:hover{
